# Python-Console-Todo-App

./: .gitignore  README.md  mailmap.txt  main.py  pyproject.toml  pytest.ini
history/prompts/constitution/: 1-create-project-constitution.constitution.prompt.md
history/prompts/interactive-menu-mode/: 6-create-interactive-menu-spec.spec.prompt.md  7-update-cli-for-interactive-menu.green.prompt.md
history/prompts/interactive-terminal-menu/: 8-create-interactive-terminal-menu-spec.spec.prompt.md
history/prompts/phase1-todo-app/: 2-create-phase1-todo-app-spec.spec.prompt.md  3-plan-phase1-todo-app.plan.prompt.md  4-generate-phase1-todo-app-tasks.tasks.prompt.md  5-implement-phase1-todo-app.green.prompt.md
src/todo/: models.py  storage.py
