[project]
name = "python-console-todo-app"
version = "1.0.0"
description = "A simple console-based todo application using only Python standard library"
authors = [
    {name = "AI Khanzadi", email = "ai.khanzadi@example.com"}
]
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}

[project.scripts]
todo = "main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"